force-app/main/default/objects/Contract_Fee_Detail__c/Contract_Fee_Detail__c.object-meta.xml
<CustomObject>
    <label>Contract Fee Detail</label>
    <nameField>
        
        <displayFormat>CFD-{000000}</displayFormat>
        
        <label>Contract Fee Detail Name</label>
        
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Contract Fee Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>