force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acq_Anchor_Qualif_Investment_Grade__c.field-meta.xml
<CustomField>
    <fullName>Acq_Anchor_Qualif_Investment_Grade__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, this fee will only be valid for anchors that are Investment Grade</inlineHelpText>
    <label>Acq Anchor Qualif: Investment-Grade</label>
    <type>Checkbox</type>
</CustomField>