force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acq_Anchor_Qualif_Not_Investment_Grade__c.field-meta.xml
<CustomField>
    <fullName>Acq_Anchor_Qualif_Not_Investment_Grade__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, this fee will valid for anchors that are not Investment Grade (ie, Financial Review)</inlineHelpText>
    <label>Acq Anchor Qualif: Not Investment-Grade</label>
    <type>Checkbox</type>
</CustomField>