force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acq_Cust_Sub_Group_LMI__c.field-meta.xml
<CustomField>
    <fullName>Acq_Cust_Sub_Group_LMI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if this CFD applies to LMI customers (Opportunities with Customer Sub Group set to LMI)</inlineHelpText>
    <label>Acq Cust. Sub-Group: LMI</label>
    <type>Checkbox</type>
</CustomField>