force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acquisition_Channels_Closed_by_BCS__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Channels_Closed_by_BCS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When lead is acquired by Client but Closed by Perch</inlineHelpText>
    <label>Acq Channels: Client Acquired/BCS Closed</label>
    <type>Checkbox</type>
</CustomField>