force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acquisition_Channels_Non_BCS_Acquired__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Channels_Non_BCS_Acquired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if this fee is valid for customers who were not acquired by BCS</inlineHelpText>
    <label>Acq Channels: Non-BCS Acquired</label>
    <type>Checkbox</type>
</CustomField>