force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acquisition_Cust_Group_Non_Residential__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Cust_Group_Non_Residential__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if valid fee for customers with Customer Group = Non-Residential.
Small offtake (ie, Residential and Non-Residential Customer Groups) can be labeled as &quot;non-Demand Customers&quot; and Anchors can be labeled as &quot;Demand Customers&quot; in client contracts.</inlineHelpText>
    <label>Acquisition Cust. Group: Non-Residential</label>
    <type>Checkbox</type>
</CustomField>