force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acquisition_Cust_Group_Not_Specified__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Cust_Group_Not_Specified__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>True if this CFD applies to Opportunities without a Customer Group specified (typically the case)</inlineHelpText>
    <label>Acq Cust. Sub-Group: Not Specified</label>
    <type>Checkbox</type>
</CustomField>