force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acquisition_Cust_Group_Public_Offtake__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Cust_Group_Public_Offtake__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if this CFD is valid for customers with the Customer Sub-Group = Public Offtake.</inlineHelpText>
    <label>Acq Cust. Sub-Group: Public Offtake</label>
    <type>Checkbox</type>
</CustomField>