force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acquisition_Sizing_Type_Downsizing__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Sizing_Type_Downsizing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if this fee is valid for decreases in a customer subscription (- kW)</inlineHelpText>
    <label>Acquisition Sizing Type: Downsizing</label>
    <type>Checkbox</type>
</CustomField>