force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acquisition_Sizing_Type_Upsizing__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Sizing_Type_Upsizing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if this fee is valid for increases in a customer subscription (+ kW)</inlineHelpText>
    <label>Acquisition Sizing Type: Upsizing</label>
    <type>Checkbox</type>
</CustomField>