force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acquisition_Type_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Type_Acquisition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>As opposed to Reacquistion. True if this fee is valid for acquistion</inlineHelpText>
    <label>Acquisition Type: Acquisition</label>
    <type>Checkbox</type>
</CustomField>