force-app/main/default/objects/Contract_Fee_Detail__c/fields/Acquisition_Type_Reacquisition__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Type_Reacquisition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>As opposed to Acquistion. True if this fee is valid for reacquistion</inlineHelpText>
    <label>Acquisition Type: Reacquisition</label>
    <type>Checkbox</type>
</CustomField>