force-app/main/default/objects/Contract_Fee_Detail__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <inlineHelpText>The related Client Contract</inlineHelpText>
    <label>Contract</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contract Fee Detail must be related to a contract with the record type = Client Contract</errorMessage>
        <filterItems>
            <field>Contract.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client Contract</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Fee Detail</relationshipLabel>
    <relationshipName>Contract_Fee_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>