force-app/main/default/objects/Contract_Fee_Detail__c/fields/Deposit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Fee</label>
    <type>Checkbox</type>
</CustomField>