force-app/main/default/objects/Contract_Fee_Detail__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <inlineHelpText>The annual $ value of the fee, see &quot;Fee Unit&quot; field for the denominator ($/W year or $/MW year or $/project year)</inlineHelpText>
    <label>Fee ($)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>