force-app/main/default/objects/Contract_Fee_Detail__c/fields/Fee_Unit__c.field-meta.xml
<CustomField>
    <fullName>Fee_Unit__c</fullName>
    <inlineHelpText>See Fee ($) field for numerator. Ie $/W, $/MW (implicitly, per year)</inlineHelpText>
    <label>Fee Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>per W</fullName>
            </value>
            <value>
                <fullName>per MW</fullName>
            </value>
            <value>
                <fullName>per project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>