force-app/main/default/objects/Contract_Fee_Detail__c/fields/LMI_Rate__c.field-meta.xml
<CustomField>
    <fullName>LMI_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, indicates this management fee applies to LMI systems</inlineHelpText>
    <label>LMI Rate</label>
    <type>Checkbox</type>
</CustomField>