force-app/main/default/objects/Contract_Fee_Detail__c/fields/Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management Fee</label>
    <type>Checkbox</type>
</CustomField>