force-app/main/default/objects/Contract_Fee_Detail__c/fields/Management_Fee_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Trigger__c</fullName>
    <inlineHelpText>The SSS milestone date that starts management fees - can be used for either one-time or recurring fees. For one time, the date the charge is incurred. For recurring, the start date that the recurring charge begins</inlineHelpText>
    <label>Management Fee Trigger</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Client_Invoicing_Events</valueSetName>
        
        </valueSet>
</CustomField>