force-app/main/default/objects/Contract_Fee_Detail__c/fields/Management_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Type__c</fullName>
    <inlineHelpText>One-Time fees are often called &quot;onboarding fees&quot;</inlineHelpText>
    <label>Management Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>One-Time</fullName>
                
                
                    <label>One-Time</label>
                
                </value>
            
                <value>
                
                    <fullName>Recurring</fullName>
                
                
                    <label>Recurring</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>