force-app/main/default/objects/Contract_Fee_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XXXProduct</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Fee Detail</relationshipLabel>
    <relationshipName>Contract_Fee_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>