force-app/main/default/objects/Contract_Fee_Detail__c/fields/Project_Capacity_Group_Non_Anchor__c.field-meta.xml
<CustomField>
    <fullName>Project_Capacity_Group_Non_Anchor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for mgmt fees with a fixed $ per portion of the project that is reserved for small offtake capacity</inlineHelpText>
    <label>Project Capacity Group: Non-Anchor</label>
    <type>Checkbox</type>
</CustomField>