force-app/main/default/objects/Contract_Fee_Detail__c/fields/Project_Type_Acquisition_Management__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_Acquisition_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For management fees that are only relevant for projects that are Acq &amp; Management</inlineHelpText>
    <label>Project Type: Acquisition &amp; Management</label>
    <type>Checkbox</type>
</CustomField>