force-app/main/default/objects/Contract_Fee_Detail__c/fields/Project_Type_Management_Only__c.field-meta.xml
<CustomField>
    <fullName>Project_Type_Management_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For management fees that are only relevant for projects that are Management Only</inlineHelpText>
    <label>Project Type: Management Only</label>
    <type>Checkbox</type>
</CustomField>