force-app/main/default/objects/Contract_Fee_Detail__c/fields/Recurring_Billing_Timing__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Timing__c</fullName>
    <label>Recurring Billing Timing</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>In Arrears</fullName>
                
                
                    <label>In Arrears</label>
                
                </value>
            
                <value>
                
                    <fullName>In Advance</fullName>
                
                
                    <label>In Advance</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>