force-app/main/default/objects/Contract_Fee_Detail__c/fields/Recurring_Escalator__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Escalator__c</fullName>
    <inlineHelpText>The % escalator at which recurring charges are increased or decreased over time. See the &quot;Recurring Escalator Frequency&quot; field to set how often the escalator takes effect</inlineHelpText>
    <label>Recurring Escalator</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>