force-app/main/default/objects/Contract_Fee_Detail__c/fields/Recurring_Escalator_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Escalator_Frequency__c</fullName>
    <inlineHelpText>The frequency in which a recurring escalator is increased or decreased. For ex.) a fee that increases 2% annually</inlineHelpText>
    <label>Recurring Escalator Frequency</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Monthly</fullName>
                
                
                    <label>Monthly</label>
                
                </value>
            
                <value>
                
                    <fullName>Quarterly</fullName>
                
                
                    <label>Quarterly</label>
                
                </value>
            
                <value>
                
                    <fullName>Annually</fullName>
                
                
                    <label>Annually</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>