force-app/main/default/objects/Contract_Fee_Detail__c/fields/Recurring_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Frequency__c</fullName>
    <inlineHelpText>The frequency at which the recurring fee is charged. The start date is set by the &quot;Management Fee Trigger&quot; field</inlineHelpText>
    <label>Recurring Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>