force-app/main/default/objects/Contract_Fee_Detail__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to make this CFD specific to a SSS when the ClientInvoicingFeeAssignmentService assigns a CFD to a Subscription Order when the SO is approved.</inlineHelpText>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>Contract Fee Detail</relationshipLabel>
    <relationshipName>Contract_Fee_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>