force-app/main/default/objects/Contract_Fee_Detail__c/fields/UCB_Rate__c.field-meta.xml
<CustomField>
    <fullName>UCB_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the rate is applied to a UCB or non-UCB project</description>
    <inlineHelpText>Determines whether the rate is applied to a UCB or non-UCB project</inlineHelpText>
    <label>UCB Rate</label>
    <type>Checkbox</type>
</CustomField>