force-app/main/default/objects/Contract_Fee_Detail__c/fields/Utilization_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Adjustment_Amount__c</fullName>
    <inlineHelpText>For every 1% decrease in utilization, the management fee will decrease by this $ amount.</inlineHelpText>
    <label>Utilization Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>