force-app/main/default/objects/Contract_Fee_Detail__c/fields/Utilization_Adjustment_Floor__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Adjustment_Floor__c</fullName>
    <inlineHelpText>Utilization adjustments cannot be more than X percent of the management fee in a given month</inlineHelpText>
    <label>Utilization Adjustment Floor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>