force-app/main/default/objects/Contract_Fee_Detail__c/fields/Utilization_Adjustment_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Adjustment_Multiplier__c</fullName>
    <inlineHelpText>For every 1% decrease in utilization, the management fee will decrease by this percent.</inlineHelpText>
    <label>Utilization Adjustment Multiplier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>