force-app/main/default/objects/Contract_Fee_Detail__c/fields/Utilization_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Adjustment_Type__c</fullName>
    <label>Utilization Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiplier (%)</fullName>
            </value>
            <value>
                <fullName>Amount ($)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>