force-app/main/default/objects/Contract_Fee_Detail__c/fields/Waive_Reacq_Fee_After_Initial_Period__c.field-meta.xml
<CustomField>
    <fullName>Waive_Reacq_Fee_After_Initial_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Specifies that reacquisition fees should be waived up to a Max Project % (which could be blank) for Subscription Orders effective after the initial period.</inlineHelpText>
    <label>Waive Reacq Fee After Initial Period</label>
    <type>Checkbox</type>
</CustomField>