force-app/main/default/objects/Contract_Fee_Detail__c/fields/Waive_Reacq_Fee_Estimated_COD__c.field-meta.xml
<CustomField>
    <fullName>Waive_Reacq_Fee_Estimated_COD__c</fullName>
    <inlineHelpText>Only used for the &quot;Project: Estimated COD or Customer: Assignment Date&quot; Initial Period Milestone option. Should match the date in the contract and distinct from the SSS&apos;s Estimated COD which can change.</inlineHelpText>
    <label>Waive Reacq Fee: Estimated COD</label>
    <type>Date</type>
</CustomField>