force-app/main/default/objects/Contract_Fee_Detail__c/fields/Waive_Reacquisition_Fee_Max_Project__c.field-meta.xml
<CustomField>
    <fullName>Waive_Reacquisition_Fee_Max_Project__c</fullName>
    <inlineHelpText>Reacquisition fees will be waived until X% (annually) of the project (calculated by summing SOs with waived fee CIMs) has been reacquired after the initial period. If blank, all SOs will get CIMs to waive fees (potentially more than 100% of the project).</inlineHelpText>
    <label>Waive Reacq Fee: Max % After Period</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>