force-app/main/default/objects/Contract_Fee_Detail__c/fields/Waive_Reacquisition_Fee_Number_Months__c.field-meta.xml
<CustomField>
    <fullName>Waive_Reacquisition_Fee_Number_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Must be populated at same time as field Waive Reacq Fee:Initial Period Milestone. The milestone + # of Months defines the end of the initial period, allowing us to waive fees before or after that initial period. Could be 0 but not blank.</inlineHelpText>
    <label>Waive Reacq Fee: # of Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>