force-app/main/default/objects/Contract_Fee_Detail__c/fields/Waive_Reacquisition_Fee_Project_Date__c.field-meta.xml
<CustomField>
    <fullName>Waive_Reacquisition_Fee_Project_Date__c</fullName>
    <inlineHelpText>Must be populated at same time as field Waive Reacq Fee: # of Months. The milestone + # of Months defines the end of the initial period, allowing us to waive fees before or after that initial period.</inlineHelpText>
    <label>Waive Reacq Fee:Initial Period Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Invoicing_Events</valueSetName>
    </valueSet>
</CustomField>