force-app/main/default/objects/Contract_Fee_Detail__c/validationRules/Do_not_populate_acq_fee_fields_if_mgmt.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_populate_acq_fee_fields_if_mgmt</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Management_Fee__c,
OR(
Acquisition_Cust_Group_Anchor__c,
Acquisition_Cust_Group_Residential__c, 
Acquisition_Sizing_Type_Downsizing__c,  
Acquisition_Sizing_Type_Upsizing__c,  
Acquisition_Channels_BCS_Acquired__c,  
Acquisition_Channels_Non_BCS_Acquired__c  
)
)</errorConditionFormula>
    <errorDisplayField>Management_Fee__c</errorDisplayField>
    <errorMessage>If this is an management fee, do not populate acquisition fee fields</errorMessage>
</ValidationRule>