force-app/main/default/objects/Contract_Fee_Detail__c/validationRules/Fee_Type_Must_Be_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Fee_Type_Must_Be_Set</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
OR(
Acquisition_Type_Acquisition__c,
Acquisition_Type_Reacquisition__c,
Management_Fee__c,
Deposit_Fee__c 
)
)</errorConditionFormula>
    <errorMessage>You must set the fee type to be either Acquisition, Reacquisition, Management, or Deposit</errorMessage>
</ValidationRule>