force-app/main/default/objects/Contract_Fee_Detail__c/validationRules/Recurring_Field_Must_be_Populated_Togeth.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Field_Must_be_Populated_Togeth</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND( 
ISPICKVAL(Management_Fee_Type__c,&quot;Recurring&quot;),
ISPICKVAL(Recurring_Frequency__c,&quot;&quot;)
),
AND( 
NOT(ISPICKVAL(Management_Fee_Type__c,&quot;Recurring&quot;)),
NOT(ISPICKVAL(Recurring_Frequency__c,&quot;&quot;))
)
)</errorConditionFormula>
    <errorDisplayField>Management_Fee_Type__c</errorDisplayField>
    <errorMessage>If this fee is recurring, you must populate the recurring frequency field. You can&apos;t populate recurring frequency without also setting the fee type to recurring</errorMessage>
</ValidationRule>